@@ -300,15 +300,22 @@ static void HelpOnSignalCB(Widget w, XtPointer client_data,
     Widget label = Widget(client_data);
     string sig = XtName(label);
 
-    // libc info has one common node for sigusr1 and sigusr2
+    string s = "";
+
+    if (sig == "all")
+    {
+	HelpOnThisCB(w, XtPointer(label), call_data);
+	return;
+    }
+
+    StatusDelay delay("Retrieving signal documentation");
+
+    // libc info has one common node for SIGUSR1 and SIGUSR2
     string sigindex = sig;
     if (sigindex == "SIGUSR1")
 	sigindex = "SIGUSR2";
 
     string cmd = "info -f libc -n 'Variable Index' " + sigindex + " -o -";
-
-    string s;
-    StatusDelay delay("Retrieving signal documentation");
 
     FILE *fp = popen(sh_command(cmd), "r");
     if (fp != 0)
@@ -1202,7 +1209,9 @@ static void add_button(Widget form, int& row, Dimension& max_width,
     {
     case GDB:
     {
-	if (!line.contains(" -- ") && !line.contains("SIG", 0))
+	if (!line.contains(" -- ") && 
+	    (entry_filter != SignalEntry || (!line.contains("SIG", 0) &&
+					     !line.contains("all", 0))))
 	    return;			// No help line
 
 	set_command  = line.before(" -- ");
@@ -1214,7 +1223,7 @@ static void add_button(Widget form, int& row, Dimension& max_width,
 
 	if (entry_filter == SignalEntry)
 	{
-	    if (!line.contains("SIG", 0))
+	    if (!line.contains("all", 0) && !line.contains("SIG", 0))
 		return;		// No signal line
 
 	    // Special handling for signal tables
@@ -1273,8 +1282,8 @@ static void add_button(Widget form, int& row, Dimension& max_width,
 	}
 	else
 	{
-	    if (base == "handle")
-		return;	// We already have `info signals'.
+	    if (base == "signals")
+		return;	// We already have `info handle'.
 	    if (base == "watchpoints")
 		return;	// We already have `info breakpoints'.
 	    if (base == "target")
@@ -1284,10 +1293,10 @@ static void add_button(Widget form, int& row, Dimension& max_width,
 	    if (base == "line")
 		return;	// `info line' requires an argument.
 
-	    // These infos produce too much output for our data window
-	    // to be of any use.  Even more, a large data display as
-	    // generated by `info functions' causes my X terminal to
-	    // crash - AZ.
+	    // These infos produce too much output for the data window
+	    // to be of any use.  Even worse, a data display as large
+	    // as the one generated by `info functions' causes my X
+	    // terminal to crash. - AZ
 	    if (base == "types")
 		return;
 	    if (base == "functions")
@@ -1460,6 +1469,14 @@ static void add_button(Widget form, int& row, Dimension& max_width,
 	pass  = create_signal_button(label, "pass",  row, send);
 	print = create_signal_button(label, "print", row, pass);
 	stop  = create_signal_button(label, "stop",  row, print);
+
+	if (base == "all")
+	{
+	    set_sensitive(send, False);
+	    XtVaSetValues(pass,  XmNset, True, NULL);
+	    XtVaSetValues(print, XmNset, True, NULL);
+	    XtVaSetValues(stop,  XmNset, True, NULL);
+	}
     }
 
     // Add entry
@@ -1703,13 +1720,16 @@ static void add_button(Widget form, int& row, Dimension& max_width,
 
     if (e_type == SignalEntry)
     {
-	// Initialize button
-	process_handle(line, true);
+	if (base != "all")
+	{
+	    // Initialize button
+	    process_handle(line, true);
 
-	// Register buttons
-	signals_entries += stop;
-	signals_entries += print;
-	signals_entries += pass;
+	    // Register buttons
+	    signals_entries += stop;
+	    signals_entries += print;
+	    signals_entries += pass;
+	}
     }
     else if (e_type != DisplayToggleButtonEntry)
     {
@@ -1741,6 +1761,21 @@ static void add_button(Widget form, int& row, Dimension& max_width,
     row++;
 }
 
+// Add separator
+static void add_separator(Widget form, int& row)
+{
+    Arg args[10];
+    int arg = 0;
+    XtSetArg(args[arg], XmNleftAttachment,   XmATTACH_FORM);     arg++;
+    XtSetArg(args[arg], XmNrightAttachment,  XmATTACH_FORM);     arg++;
+    XtSetArg(args[arg], XmNtopAttachment,    XmATTACH_POSITION); arg++;
+    XtSetArg(args[arg], XmNtopPosition,      row);               arg++;
+    XtSetArg(args[arg], XmNbottomAttachment, XmATTACH_POSITION); arg++;
+    XtSetArg(args[arg], XmNbottomPosition,   row + 1);           arg++;
+    Widget sep = verify(XmCreateSeparator(form, "sep", args, arg));
+    XtManageChild(sep);
+    row++;
+}
 
 // Add buttons
 static void add_settings(Widget form, int& row, Dimension& max_width,
@@ -1753,7 +1788,7 @@ static void add_settings(Widget form, int& row, Dimension& max_width,
     {
     case GDB:
 	if (entry_filter == SignalEntry)
-	    commands = cached_gdb_question("info signals");
+	    commands = cached_gdb_question("info handle");
 	else
 	    commands = cached_gdb_question("help " + gdb_class);
 	break;
@@ -1793,28 +1828,20 @@ static void add_settings(Widget form, int& row, Dimension& max_width,
     }
     }
 
+    if (type == GDB && entry_filter == SignalEntry)
+    {
+	// Add an entry for `handle all'
+	add_button(form, row, max_width, type, entry_filter,
+		   "all\tYes\tYes\tYes\tAll Signals");
+	// add_separator(form, row);
+    }
+
     while (commands != "")
     {
 	string line = commands.before('\n');
 	commands    = commands.after('\n');
 	add_button(form, row, max_width, type, entry_filter, line);
     }
-}
-
-// Add separator
-static void add_separator(Widget form, int& row)
-{
-    Arg args[10];
-    int arg = 0;
-    XtSetArg(args[arg], XmNleftAttachment,   XmATTACH_FORM);     arg++;
-    XtSetArg(args[arg], XmNrightAttachment,  XmATTACH_FORM);     arg++;
-    XtSetArg(args[arg], XmNtopAttachment,    XmATTACH_POSITION); arg++;
-    XtSetArg(args[arg], XmNtopPosition,      row);               arg++;
-    XtSetArg(args[arg], XmNbottomAttachment, XmATTACH_POSITION); arg++;
-    XtSetArg(args[arg], XmNbottomPosition,   row + 1);           arg++;
-    Widget sep = verify(XmCreateSeparator(form, "sep", args, arg));
-    XtManageChild(sep);
-    row++;
 }
 
 // Reload all settings
@@ -2207,7 +2234,9 @@ static void reload_all_signals()
 static Widget create_signals(DebuggerType type)
 {
     if (signals_panel == 0 && gdb->isReadyWithPrompt() && gdb->type() == type)
+    {
 	signals_panel = create_panel(type, SIGNALS);
+    }
     else if (signals_panel != 0 && need_reload_signals)
     {
 	reload_all_signals();
